feat: Done the subscriber deletion system.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
         <div class="container-item-1">
             <div class="item-1-next-1">
                 <button id="delete-all-subs-button">Delete All Subs!</button>
+                <button id="update-prices-button">Update Prices</button>
                 <button id="add-sub-button">Add Sub</button>
             </div>
             <div class="item-1-next-2">
+                <p id="no-subs-text">No subscribers yet.</p>
+                <input type="text" id="search-input" placeholder="Search" autocomplete="off">
+            </div>
+            <div class="item-1-next-3">
                 <div class="grid-div">
                     <!-- Example Card 
                     <div class="grid-item">
@@ -29,8 +34,8 @@
                             <p class="p-tags">Checkout: 2850 TL</p>
                             <p class="p-tags">Starter Date: 28.10.2025</p>
                         </div>
-                        <div class="remove-button-div">
-                            <button class="remove-button">Remove</button>
+                        <div class="delete-button-div">
+                            <button class="delete-button" data-id="">Delete</button>
                         </div>
                     </div> -->
                 </div>
